# Analyzing_Transactions_From_Excel_file

./: .flake8  .gitignore  README.md  pyproject.toml
src/: main.py  services.py
tests/: test_services.py
